--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,13 +16,13 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "YOUR_WORKBOOK_TITLE"
+title                    : "Configuration Workbook"
 title_separator          : "-"
-name                     : "YOUR_NAME_OR_ORGANIZATION"
+name                     : "Flavorman"
 description              : "SHORT_DESCRIPTION_OF_YOUR_WORKBOOK"
-url                      : "https://sfdx-isv.github.io"     # The base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "/github-pages-workbook"         # The subpath of your site, e.g. "/blog"
-repository               : "sfdx-isv/github-pages-workbook" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+url                      : "https://flmbm.github.io"     # The base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl                  : "/pages-workbook"         # The subpath of your site, e.g. "/blog"
+repository               : "flmbm/pages-workbook" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -102,7 +102,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name Here"
+  name             : "Brandon M."
   avatar           : "/assets/images/VMC-500x500.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Your Bio Here"
   location         : "Your City, Your State"
