--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Configuration Workbook"
+title                    : "ADMINISTRATOR CONFIGURATION WORKBOOK"
 title_separator          : "-"
 name                     : "Flavorman"
 description              : "SHORT_DESCRIPTION_OF_YOUR_WORKBOOK"
