--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -29,7 +29,7 @@ part_0:
 
 # Part One (Title of Part One)
 part_1:
-  - title: "Part One"
+  - title: "Org. Overview"
     children: 
       - title: "Overview of Part One"
         url: /part-one/overview/
